Add tests for MemoryCoordinator::Can{Throttle,Suspend}Renderer()

This is a follow-up CL of crrev.com/2536533002.

BUG=670814

Review-Url: https://codereview.chromium.org/2552603002
Cr-Commit-Position: refs/heads/master@{#436212}

Former-commit-id: 55c11e47b4e1ba6b7f20cda3f3947b592e32a6e8